--- a/week3/lesson 3.1, lesson 3.2 and lesson 3.3.ipynb
+++ b/week3/lesson 3.1, lesson 3.2 and lesson 3.3.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -149,32 +149,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+---+---+---+\n",
-      "|  A|  B|  B|  C|\n",
-      "+---+---+---+---+\n",
-      "|  1|  3|  3|  4|\n",
-      "|  1|  3|  3|  5|\n",
-      "|  1|  3|  3|  6|\n",
-      "|  1|  3|  3|  7|\n",
-      "|  2|  3|  3|  4|\n",
-      "|  2|  3|  3|  5|\n",
-      "|  2|  3|  3|  6|\n",
-      "|  2|  3|  3|  7|\n",
-      "|  1|  2|  2|  3|\n",
-      "|  1|  2|  2|  5|\n",
-      "+---+---+---+---+\n",
+      "+---+---+---+\n",
+      "|  B|  A|  C|\n",
+      "+---+---+---+\n",
+      "|  3|  1|  4|\n",
+      "|  3|  1|  5|\n",
+      "|  3|  1|  6|\n",
+      "|  3|  1|  7|\n",
+      "|  3|  2|  4|\n",
+      "|  3|  2|  5|\n",
+      "|  3|  2|  6|\n",
+      "|  3|  2|  7|\n",
+      "|  2|  1|  3|\n",
+      "|  2|  1|  5|\n",
+      "+---+---+---+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "abcDF = abDF.join(bcDF, abDF.B == bcDF.B)\n",
+    "abcDF = abDF.join(bcDF, \"B\")\n",
     "abcDF.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+---+\n",
+      "|  B|  A|  C|\n",
+      "+---+---+---+\n",
+      "|  3|  1|  4|\n",
+      "|  3|  1|  5|\n",
+      "|  3|  1|  6|\n",
+      "|  3|  1|  7|\n",
+      "|  2|  1|  3|\n",
+      "|  2|  1|  5|\n",
+      "+---+---+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "abcDF = abDF.join(bcDF, \"B\")\n",
+    "\n",
+    "abcDF.filter(\"A = 1\").show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -213,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -256,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -267,7 +298,7 @@
        "DataFrame[id: string, name: string, age: bigint, gender: string, university: string]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -334,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -375,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -420,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -465,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -510,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -539,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -590,30 +621,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----+---+-------+---+------+----------+\n",
-      "|count| id|   name|age|gender|university|\n",
-      "+-----+---+-------+---+------+----------+\n",
-      "|    2|  1|   Alex| 28|     M|      MIPT|\n",
-      "|    2|  2|  Emeli| 28|     F|      MIPT|\n",
-      "|    3|  3|Natasha| 27|     F|     SPbSU|\n",
-      "|    1|  4|  Pavel| 30|     M|      MIPT|\n",
-      "|    1|  5|   Oleg| 35|     M|      MIPT|\n",
-      "|    0|  6|   Ivan| 30|     M|       MSU|\n",
-      "|    0|  7|   Ilya| 29|     M|       MSU|\n",
-      "+-----+---+-------+---+------+----------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = gf.triangleCount()\n",
     "results.show()"
@@ -621,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -632,32 +644,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+---+\n",
-      "|  A|  B|\n",
-      "+---+---+\n",
-      "|  1|  2|\n",
-      "|  1|  3|\n",
-      "|  1|  4|\n",
-      "|  2|  3|\n",
-      "|  2|  5|\n",
-      "|  3|  4|\n",
-      "|  3|  5|\n",
-      "|  3|  6|\n",
-      "|  3|  7|\n",
-      "+---+---+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType\n",
     "from pyspark.sql import Row\n",
@@ -676,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -693,97 +684,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+---+\n",
-      "|  B| C1|\n",
-      "+---+---+\n",
-      "|  1|  2|\n",
-      "|  1|  3|\n",
-      "|  1|  4|\n",
-      "|  2|  3|\n",
-      "|  2|  5|\n",
-      "|  3|  4|\n",
-      "|  3|  5|\n",
-      "|  3|  6|\n",
-      "|  3|  7|\n",
-      "+---+---+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bc1DF.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+---+\n",
-      "|  A| C2|\n",
-      "+---+---+\n",
-      "|  1|  2|\n",
-      "|  1|  3|\n",
-      "|  1|  4|\n",
-      "|  2|  3|\n",
-      "|  2|  5|\n",
-      "|  3|  4|\n",
-      "|  3|  5|\n",
-      "|  3|  6|\n",
-      "|  3|  7|\n",
-      "+---+---+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ac2DF.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+---+---+\n",
-      "|  B|  A| C1|\n",
-      "+---+---+---+\n",
-      "|  3|  1|  4|\n",
-      "|  3|  1|  5|\n",
-      "|  3|  1|  6|\n",
-      "|  3|  1|  7|\n",
-      "|  3|  2|  4|\n",
-      "|  3|  2|  5|\n",
-      "|  3|  2|  6|\n",
-      "|  3|  2|  7|\n",
-      "|  2|  1|  3|\n",
-      "|  2|  1|  5|\n",
-      "+---+---+---+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "abc1DF = abDF.join(bc1DF, \"B\")\n",
     "abc1DF.show()"
@@ -791,44 +718,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+---+---+---+\n",
-      "|  A|  B| C1| C2|\n",
-      "+---+---+---+---+\n",
-      "|  1|  3|  4|  2|\n",
-      "|  1|  3|  4|  3|\n",
-      "|  1|  3|  4|  4|\n",
-      "|  1|  3|  5|  2|\n",
-      "|  1|  3|  5|  3|\n",
-      "|  1|  3|  5|  4|\n",
-      "|  1|  3|  6|  2|\n",
-      "|  1|  3|  6|  3|\n",
-      "|  1|  3|  6|  4|\n",
-      "|  1|  3|  7|  2|\n",
-      "|  1|  3|  7|  3|\n",
-      "|  1|  3|  7|  4|\n",
-      "|  1|  2|  3|  2|\n",
-      "|  1|  2|  3|  3|\n",
-      "|  1|  2|  3|  4|\n",
-      "|  1|  2|  5|  2|\n",
-      "|  1|  2|  5|  3|\n",
-      "|  1|  2|  5|  4|\n",
-      "|  2|  3|  4|  3|\n",
-      "|  2|  3|  4|  5|\n",
-      "+---+---+---+---+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "abc1c2DF = abc1DF.join(ac2DF, \"A\")\n",
     "abc1c2DF.show()"
@@ -836,33 +730,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+---+---+---+\n",
-      "|  A|  B| C1| C2|\n",
-      "+---+---+---+---+\n",
-      "|  1|  2|  3|  3|\n",
-      "|  1|  3|  4|  4|\n",
-      "|  2|  3|  5|  5|\n",
-      "+---+---+---+---+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "abc1c2DF.filter(\"C1 = C2\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -874,38 +753,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------+-----+\n",
-      "|triangleVertex|count|\n",
-      "+--------------+-----+\n",
-      "|             1|    2|\n",
-      "|             2|    2|\n",
-      "|             3|    3|\n",
-      "|             4|    1|\n",
-      "|             5|    1|\n",
-      "+--------------+-----+\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{None}"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "{\n",
     "    abc1c2DF.filter(\"C1 = C2\")\n",
@@ -960,33 +812,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+---+---+----------+\n",
-      "|  B|  A| C1|isTriangle|\n",
-      "+---+---+---+----------+\n",
-      "|  3|  1|  4|      true|\n",
-      "|  3|  1|  5|     false|\n",
-      "|  3|  1|  6|     false|\n",
-      "|  3|  1|  7|     false|\n",
-      "|  3|  2|  4|     false|\n",
-      "|  3|  2|  5|      true|\n",
-      "|  3|  2|  6|     false|\n",
-      "|  3|  2|  7|     false|\n",
-      "|  2|  1|  3|      true|\n",
-      "|  2|  1|  5|     false|\n",
-      "+---+---+---+----------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "edgeListBC = sc.broadcast(set(edgeList))\n",
     "\n",
@@ -1003,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1037,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1048,34 +878,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------------------+--------------------+--------------------+\n",
-      "|                  A|                   B|                   C|\n",
-      "+-------------------+--------------------+--------------------+\n",
-      "| [1,Alex,28,M,MIPT]| [2,Emeli,28,F,MIPT]|[3,Natasha,27,F,S...|\n",
-      "| [1,Alex,28,M,MIPT]|[3,Natasha,27,F,S...| [4,Pavel,30,M,MIPT]|\n",
-      "|[2,Emeli,28,F,MIPT]|[3,Natasha,27,F,S...|  [5,Oleg,35,M,MIPT]|\n",
-      "+-------------------+--------------------+--------------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "triangles.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1090,58 +905,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+-----+\n",
-      "| id|count|\n",
-      "+---+-----+\n",
-      "|  1|    2|\n",
-      "|  2|    2|\n",
-      "|  3|    3|\n",
-      "|  4|    1|\n",
-      "|  5|    1|\n",
-      "+---+-----+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vertexTriangles.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+-------+---+------+----------+-----+\n",
-      "| id|   name|age|gender|university|count|\n",
-      "+---+-------+---+------+----------+-----+\n",
-      "|  1|   Alex| 28|     M|      MIPT|    2|\n",
-      "|  2|  Emeli| 28|     F|      MIPT|    2|\n",
-      "|  3|Natasha| 27|     F|     SPbSU|    3|\n",
-      "|  4|  Pavel| 30|     M|      MIPT|    1|\n",
-      "|  5|   Oleg| 35|     M|      MIPT|    1|\n",
-      "|  6|   Ivan| 30|     M|       MSU| null|\n",
-      "|  7|   Ilya| 29|     M|       MSU| null|\n",
-      "+---+-------+---+------+----------+-----+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gf.vertices.join(vertexTriangles, \"id\", \"left_outer\").show()"
    ]
