Reduce sizes of shown tables from 20 to 15 for Vladimir (one more table)

--- a/week3/lesson 3.1, lesson 3.2 and lesson 3.3.ipynb
+++ b/week3/lesson 3.1, lesson 3.2 and lesson 3.3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -453,38 +453,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+--------------------+--------------------+\n",
-      "|                   A|                   B|                   C|\n",
-      "+--------------------+--------------------+--------------------+\n",
-      "|[3,Natasha,27,F,S...| [2,Emeli,28,F,MIPT]|  [1,Alex,28,M,MIPT]|\n",
-      "|  [5,Oleg,35,M,MIPT]| [2,Emeli,28,F,MIPT]|  [1,Alex,28,M,MIPT]|\n",
-      "| [2,Emeli,28,F,MIPT]|[3,Natasha,27,F,S...|  [1,Alex,28,M,MIPT]|\n",
-      "| [4,Pavel,30,M,MIPT]|[3,Natasha,27,F,S...|  [1,Alex,28,M,MIPT]|\n",
-      "|  [5,Oleg,35,M,MIPT]|[3,Natasha,27,F,S...|  [1,Alex,28,M,MIPT]|\n",
-      "|   [6,Ivan,30,M,MSU]|[3,Natasha,27,F,S...|  [1,Alex,28,M,MIPT]|\n",
-      "|   [7,Ilya,29,M,MSU]|[3,Natasha,27,F,S...|  [1,Alex,28,M,MIPT]|\n",
-      "|[3,Natasha,27,F,S...| [4,Pavel,30,M,MIPT]|  [1,Alex,28,M,MIPT]|\n",
-      "|[3,Natasha,27,F,S...|  [1,Alex,28,M,MIPT]| [2,Emeli,28,F,MIPT]|\n",
-      "| [4,Pavel,30,M,MIPT]|  [1,Alex,28,M,MIPT]| [2,Emeli,28,F,MIPT]|\n",
-      "|  [1,Alex,28,M,MIPT]|[3,Natasha,27,F,S...| [2,Emeli,28,F,MIPT]|\n",
-      "| [4,Pavel,30,M,MIPT]|[3,Natasha,27,F,S...| [2,Emeli,28,F,MIPT]|\n",
-      "|  [5,Oleg,35,M,MIPT]|[3,Natasha,27,F,S...| [2,Emeli,28,F,MIPT]|\n",
-      "|   [6,Ivan,30,M,MSU]|[3,Natasha,27,F,S...| [2,Emeli,28,F,MIPT]|\n",
-      "|   [7,Ilya,29,M,MSU]|[3,Natasha,27,F,S...| [2,Emeli,28,F,MIPT]|\n",
-      "|[3,Natasha,27,F,S...|  [5,Oleg,35,M,MIPT]| [2,Emeli,28,F,MIPT]|\n",
-      "| [2,Emeli,28,F,MIPT]|  [1,Alex,28,M,MIPT]|[3,Natasha,27,F,S...|\n",
-      "| [4,Pavel,30,M,MIPT]|  [1,Alex,28,M,MIPT]|[3,Natasha,27,F,S...|\n",
-      "|  [1,Alex,28,M,MIPT]| [2,Emeli,28,F,MIPT]|[3,Natasha,27,F,S...|\n",
-      "|  [5,Oleg,35,M,MIPT]| [2,Emeli,28,F,MIPT]|[3,Natasha,27,F,S...|\n",
-      "+--------------------+--------------------+--------------------+\n",
-      "only showing top 20 rows\n",
+      "+--------------------+--------------------+-------------------+\n",
+      "|                   A|                   B|                  C|\n",
+      "+--------------------+--------------------+-------------------+\n",
+      "|[3,Natasha,27,F,S...| [2,Emeli,28,F,MIPT]| [1,Alex,28,M,MIPT]|\n",
+      "|  [5,Oleg,35,M,MIPT]| [2,Emeli,28,F,MIPT]| [1,Alex,28,M,MIPT]|\n",
+      "| [2,Emeli,28,F,MIPT]|[3,Natasha,27,F,S...| [1,Alex,28,M,MIPT]|\n",
+      "| [4,Pavel,30,M,MIPT]|[3,Natasha,27,F,S...| [1,Alex,28,M,MIPT]|\n",
+      "|  [5,Oleg,35,M,MIPT]|[3,Natasha,27,F,S...| [1,Alex,28,M,MIPT]|\n",
+      "|   [6,Ivan,30,M,MSU]|[3,Natasha,27,F,S...| [1,Alex,28,M,MIPT]|\n",
+      "|   [7,Ilya,29,M,MSU]|[3,Natasha,27,F,S...| [1,Alex,28,M,MIPT]|\n",
+      "|[3,Natasha,27,F,S...| [4,Pavel,30,M,MIPT]| [1,Alex,28,M,MIPT]|\n",
+      "|[3,Natasha,27,F,S...|  [1,Alex,28,M,MIPT]|[2,Emeli,28,F,MIPT]|\n",
+      "| [4,Pavel,30,M,MIPT]|  [1,Alex,28,M,MIPT]|[2,Emeli,28,F,MIPT]|\n",
+      "|  [1,Alex,28,M,MIPT]|[3,Natasha,27,F,S...|[2,Emeli,28,F,MIPT]|\n",
+      "| [4,Pavel,30,M,MIPT]|[3,Natasha,27,F,S...|[2,Emeli,28,F,MIPT]|\n",
+      "|  [5,Oleg,35,M,MIPT]|[3,Natasha,27,F,S...|[2,Emeli,28,F,MIPT]|\n",
+      "|   [6,Ivan,30,M,MSU]|[3,Natasha,27,F,S...|[2,Emeli,28,F,MIPT]|\n",
+      "|   [7,Ilya,29,M,MSU]|[3,Natasha,27,F,S...|[2,Emeli,28,F,MIPT]|\n",
+      "+--------------------+--------------------+-------------------+\n",
+      "only showing top 15 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
     "motifs = gf.find(\"(A)-[]->(B); (B)-[]->(C)\").filter(\"A.id != C.id\")\n",
-    "motifs.show()"
+    "motifs.show(15)"
    ]
   },
   {
