--- a/week3/lesson 3.1, lesson 3.2 and lesson 3.3.ipynb
+++ b/week3/lesson 3.1, lesson 3.2 and lesson 3.3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -282,12 +282,12 @@
     "  (\"7\", \"3\", \"friend\")\n",
     "], [\"src\", \"dst\", \"relationship\"])\n",
     "\n",
-    "gf = GraphFrame(vertices, edges)\n"
+    "g = GraphFrame(vertices, edges)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -298,18 +298,18 @@
        "DataFrame[id: string, name: string, age: bigint, gender: string, university: string]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gf.vertices.filter(\"age > 30\")"
+    "g.vertices.filter(\"age > 30\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -330,12 +330,12 @@
     }
    ],
    "source": [
-    "gf.inDegrees.filter(\"inDegree > 2\").show()"
+    "g.inDegrees.filter(\"inDegree > 2\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -360,12 +360,12 @@
     }
    ],
    "source": [
-    "gf.inDegrees.show()"
+    "g.inDegrees.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -399,12 +399,12 @@
     }
    ],
    "source": [
-    "gf.find(\"(a)-[e]->(b); (b)-[e2]->(a)\").show(15)"
+    "g.find(\"(a)-[e]->(b); (b)-[e2]->(a)\").show(15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -438,13 +438,13 @@
     }
    ],
    "source": [
-    "motifs = gf.find(\"(A)-[]->(B); (B)-[]->(C)\")\n",
+    "motifs = g.find(\"(A)-[]->(B); (B)-[]->(C)\")\n",
     "motifs.show(15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -478,13 +478,13 @@
     }
    ],
    "source": [
-    "motifs = gf.find(\"(A)-[]->(B); (B)-[]->(C)\").filter(\"A.id != C.id\")\n",
+    "motifs = g.find(\"(A)-[]->(B); (B)-[]->(C)\").filter(\"A.id != C.id\")\n",
     "motifs.show(15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -496,21 +496,21 @@
       "+---+---+\n",
       "|  A|  C|\n",
       "+---+---+\n",
-      "|  1|  1|\n",
       "|  3|  1|\n",
       "|  5|  1|\n",
-      "|  1|  1|\n",
       "|  2|  1|\n",
       "|  4|  1|\n",
       "|  5|  1|\n",
       "|  6|  1|\n",
       "|  7|  1|\n",
-      "|  1|  1|\n",
       "|  3|  1|\n",
-      "|  2|  2|\n",
       "|  3|  2|\n",
       "|  4|  2|\n",
       "|  1|  2|\n",
+      "|  4|  2|\n",
+      "|  5|  2|\n",
+      "|  6|  2|\n",
+      "|  7|  2|\n",
       "+---+---+\n",
       "only showing top 15 rows\n",
       "\n"
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -599,13 +599,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+---+-------+---+------+----------+\n",
+      "|count| id|   name|age|gender|university|\n",
+      "+-----+---+-------+---+------+----------+\n",
+      "|    2|  1|   Alex| 28|     M|      MIPT|\n",
+      "|    2|  2|  Emeli| 28|     F|      MIPT|\n",
+      "|    3|  3|Natasha| 27|     F|     SPbSU|\n",
+      "|    1|  4|  Pavel| 30|     M|      MIPT|\n",
+      "|    1|  5|   Oleg| 35|     M|      MIPT|\n",
+      "|    0|  6|   Ivan| 30|     M|       MSU|\n",
+      "|    0|  7|   Ilya| 29|     M|       MSU|\n",
+      "+-----+---+-------+---+------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "results = gf.triangleCount()\n",
+    "results = g.triangleCount()\n",
     "results.show()"
    ]
   },
@@ -811,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -840,7 +859,7 @@
     "  (\"3\", \"7\", \"friend\")\n",
     "], [\"src\", \"dst\", \"type\"])\n",
     "\n",
-    "gf = GraphFrame(vertices, edges)"
+    "g = GraphFrame(vertices, edges)"
    ]
   },
   {
@@ -851,7 +870,7 @@
    },
    "outputs": [],
    "source": [
-    "triangles = gf.find(\"(A)-[]->(B); (B)-[]->(C); (A)-[]->(C)\")"
+    "triangles = g.find(\"(A)-[]->(B); (B)-[]->(C); (A)-[]->(C)\")"
    ]
   },
   {
@@ -900,7 +919,7 @@
    },
    "outputs": [],
    "source": [
-    "gf.vertices.join(vertexTriangles, \"id\", \"left_outer\").show()"
+    "g.vertices.join(vertexTriangles, \"id\", \"left_outer\").show()"
    ]
   },
   {
