change graph variable name from g to gf

--- a/week3/lesson 3.1, lesson 3.2 and lesson 3.3.ipynb
+++ b/week3/lesson 3.1, lesson 3.2 and lesson 3.3.ipynb
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -875,19 +875,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+--------------------+--------------------+\n",
+      "|                  A|                   B|                   C|\n",
+      "+-------------------+--------------------+--------------------+\n",
+      "| [1,Alex,28,M,MIPT]| [2,Emeli,28,F,MIPT]|[3,Natasha,27,F,S...|\n",
+      "| [1,Alex,28,M,MIPT]|[3,Natasha,27,F,S...| [4,Pavel,30,M,MIPT]|\n",
+      "|[2,Emeli,28,F,MIPT]|[3,Natasha,27,F,S...|  [5,Oleg,35,M,MIPT]|\n",
+      "+-------------------+--------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "triangles.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -902,22 +917,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+\n",
+      "| id|count|\n",
+      "+---+-----+\n",
+      "|  1|    2|\n",
+      "|  2|    2|\n",
+      "|  3|    3|\n",
+      "|  4|    1|\n",
+      "|  5|    1|\n",
+      "+---+-----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "vertexTriangles.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------+---+------+----------+-----+\n",
+      "| id|   name|age|gender|university|count|\n",
+      "+---+-------+---+------+----------+-----+\n",
+      "|  1|   Alex| 28|     M|      MIPT|    2|\n",
+      "|  2|  Emeli| 28|     F|      MIPT|    2|\n",
+      "|  3|Natasha| 27|     F|     SPbSU|    3|\n",
+      "|  4|  Pavel| 30|     M|      MIPT|    1|\n",
+      "|  5|   Oleg| 35|     M|      MIPT|    1|\n",
+      "|  6|   Ivan| 30|     M|       MSU| null|\n",
+      "|  7|   Ilya| 29|     M|       MSU| null|\n",
+      "+---+-------+---+------+----------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "g.vertices.join(vertexTriangles, \"id\", \"left_outer\").show()"
    ]
