change spark context to spark session

--- a/week4/week 4 lesson 2 spark rdd.ipynb
+++ b/week4/week 4 lesson 2 spark rdd.ipynb
@@ -47,7 +47,7 @@
     "    # Loads all URLs from input file and initialize their neighbors.\n",
     "    links = lines.map(lambda urls: parseNeighbors(urls)) \\\n",
     "        .distinct() \\\n",
-    "        .partitionBy(new HashPartitioner(100)) \\\n",
+    "        .partitionBy(100) \\\n",
     "        .cache() \\\n",
     "\n",
     "    # Loads all URLs with other URL(s) link to from input file and initialize ranks of them to one.\n",
