--- a/week4/week 4 lesson 1 connected components graphframes API.ipynb
+++ b/week4/week 4 lesson 1 connected components graphframes API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -15,13 +15,11 @@
       "      ____              __\n",
       "     / __/__  ___ _____/ /__\n",
       "    _\\ \\/ _ \\/ _ `/ __/  '_/\n",
-      "   /__ / .__/\\_,_/_/ /_/\\_\\   version 1.6.3\n",
+      "   /__ / .__/\\_,_/_/ /_/\\_\\   version 2.1.1\n",
       "      /_/\n",
       "\n",
       "Using Python version 2.7.13 (default, Dec 20 2016 23:05:08)\n",
-      "SparkContext available as sc, HiveContext available as sqlContext.\n",
-      "Warning: ADD_FILES environment variable is deprecated, use --py-files argument instead\n",
-      "Adding files: [/Users/pritykovskaya/development/graphframes-0.3.0-spark1.6-s_2.10.jar]\n"
+      "SparkSession available as 'spark'.\n"
      ]
     }
    ],
@@ -32,15 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "from pyspark.sql import SparkSession\n",
+    "sparkSession = SparkSession.builder.enableHiveSupport().master(\"local\").getOrCreate()\n",
+    "\n",
     "from graphframes import * \n",
     "\n",
-    "vertices = sqlCtx.createDataFrame([\n",
+    "vertices = sparkSession.createDataFrame([\n",
     "  (\"1\", \"Alex\", 28, \"M\", \"MIPT\"),\n",
     "  (\"2\", \"Emeli\", 28, \"F\", \"MIPT\"),\n",
     "  (\"3\", \"Natasha\", 27, \"F\", \"SPbSU\"),\n",
@@ -49,7 +50,7 @@
     "  (\"6\", \"Ivan\", 30, \"M\", \"MSU\"),\n",
     "  (\"7\", \"Ilya\", 29, \"M\", \"MSU\")], [\"id\", \"name\", \"age\", \"gender\", \"university\"])\n",
     "\n",
-    "edges = sqlCtx.createDataFrame([\n",
+    "edges = sparkSession.createDataFrame([\n",
     "  (\"1\", \"2\", \"friend\"),\n",
     "  (\"1\", \"4\", \"friend\"),\n",
     "  (\"3\", \"5\", \"friend\"),\n",
@@ -57,12 +58,12 @@
     "  (\"3\", \"7\", \"friend\")\n",
     "], [\"src\", \"dst\", \"type\"])\n",
     "\n",
-    "gf = GraphFrame(vertices, edges)"
+    "g = GraphFrame(vertices, edges)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -71,23 +72,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+---------+\n",
-      "| id|component|\n",
-      "+---+---------+\n",
-      "|  4|        0|\n",
-      "|  2|        0|\n",
-      "|  1|        0|\n",
-      "|  6|        3|\n",
-      "|  5|        3|\n",
-      "|  3|        3|\n",
-      "|  7|        3|\n",
-      "+---+---------+\n",
+      "+---+-------------+\n",
+      "| id|    component|\n",
+      "+---+-------------+\n",
+      "|  7|  25769803776|\n",
+      "|  3|  25769803776|\n",
+      "|  5|  25769803776|\n",
+      "|  6|  25769803776|\n",
+      "|  2|1236950581248|\n",
+      "|  4|1236950581248|\n",
+      "|  1|1236950581248|\n",
+      "+---+-------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "result = gf.connectedComponents()\n",
+    "sparkSession.sparkContext.setCheckpointDir(\"/tmp\")\n",
+    "result = g.connectedComponents()\n",
     "result.select(\"id\", \"component\").orderBy(\"component\").show()"
    ]
   },
